# banshie

./: Cargo.toml  Dockerfile  PROGRESS_REPORT.md  README.md  clippy.toml  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.yml  justfile  monitoring-config.yaml  package.json  railway.toml  rustfmt.toml
ai/: groq.rs  mod.rs  signals.rs
alerts/: market_events.rs  mod.rs  price_alerts.rs
analytics/: mod.rs  performance_tracker.rs
api/: jupiter_auth.rs  jupiter_lending.rs  jupiter_price_v3.rs  jupiter_send.rs  jupiter_studio.rs  jupiter_token_v2.rs  jupiter_v6.rs  mod.rs  pump_fun.rs  token_creator_api.rs
blinks/: executor.rs  generator.rs  mod.rs  sharing.rs  types.rs
bot/: commands.rs  mod.rs  telegram.rs  wallet_setup.rs
bot/handlers/: blinks.rs  callback.rs  command.rs  menu.rs  mod.rs  monitoring.rs  portfolio.rs  swap.rs  text.rs  trading.rs  wallet.rs
cache/: manager.rs  mod.rs
convex/: README.md  package.json
convex/convex/: auth.ts  crons.ts  schema.ts
convex/convex/actions/: ai.ts  ai_enhanced.ts  analytics.ts  dca.ts  media_generator.ts  solana.ts  vector_search.ts
convex/convex/mutations/: ai.ts  trading.ts
convex/convex/queries/: ai.ts  portfolio.ts  prices.ts
convex/dashboard/: package.json
convex/dashboard/src/app/: page.tsx
convex/dashboard/src/components/portfolio/: PortfolioOverview.tsx
convex/docs/: API.md  USER_GUIDE.md  openapi.yaml
convex/rust-integration/: Cargo.toml  README.md
convex/rust-integration/docs/: API.md
convex/rust-integration/src/: convex_client.rs  lib.rs  telegram_integration.rs  trading_service.rs  webhook_server.rs
convex/telegram/: bot.ts  i18n.ts  rich_media.ts
docs/deployment/: development.md  production.md
middleware/: api_rate_limiter.rs  circuit_breaker.rs  mod.rs  rate_limiter.rs
monitoring/: alerts.rs  dashboard.rs  health.rs  integration.rs  metrics.rs  mod.rs  prometheus.rs  telemetry.rs
observability/: health.rs  metrics.rs  mod.rs  tracing.rs
portfolio/: analyzer.rs  fetcher.rs  mod.rs  types.rs
security/: larp_checker.rs  mod.rs  types.rs
security/providers/: goplus.rs  mod.rs  rugcheck.rs
tests/: mod.rs  trading_tests.rs  validation_tests.rs
trading/: backrun.rs  copy_monitor.rs  copy_trading.rs  dca.rs  dca_risk_strategies.rs  dca_scheduler.rs  dex.rs  executor.rs  leaderboard.rs  mod.rs  orders.rs  signer.rs  swaps.rs  token_2022.rs  token_creator.rs  token_resolver.rs  trailing_stops.rs  types.rs
utils/: config.rs  formatting.rs  mod.rs  timeout.rs  validation.rs
wallet/: generator.rs  hardware_wallet.rs  manager.rs  mod.rs
websocket/: mod.rs  portfolio_stream.rs  price_stream.rs  realtime_client.rs
