[package]
name = "solana-trading-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"

# Telegram bot - Updated to latest
teloxide = { version = "0.13", features = ["macros", "webhooks", "ctrlc_handler"] }

# Solana SDK - Using stable versions
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Jupiter and DEX integrations
# Note: Jupiter integration is done via HTTP API, no crate needed

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database - Simplified for compatibility
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }

# Caching
redis = { version = "0.26", features = ["tokio-comp", "connection-manager", "cluster-async"] }
flate2 = "1.0"

# Utils
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }
base64 = "0.22"
bs58 = "0.5"
futures = "0.3"
regex = "1.10"
urlencoding = "2.1"

# Crypto
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

# Wallet generation - proper BIP39/BIP32 support
bip39 = "2.0"
tiny-hderive = "0.3"
hmac = "0.12"

# QR code generation
qrcode = { version = "0.14", features = ["svg"] }
image = "0.24"

# Additional utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
hex = "0.4"

# Monitoring and observability
prometheus = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
axum = { version = "0.7", features = ["macros", "json"] }

# OpenTelemetry stack for comprehensive observability
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "metrics", "tonic"] }
opentelemetry-jaeger = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"