[package]
name = "convex-rust-integration"
version = "0.1.0"
edition = "2021"
description = "Rust integration library for Convex backend in Solana Trading Bot"
license = "MIT"
repository = "https://github.com/your-org/solana-trading-bot"

[dependencies]
# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Telegram Bot
teloxide = { version = "0.12", features = ["macros"] }

# Web Server for Webhooks
warp = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
telegram = ["teloxide"]
webhooks = ["warp"]

[[bin]]
name = "integration-service"
path = "src/bin/main.rs"
required-features = ["telegram", "webhooks"]

[lib]
name = "convex_integration"
path = "src/lib.rs"